--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -2,7 +2,7 @@
   "name": "laureles-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Raffo777.github.io/Laureles/build",
+  "homepage": "https://Raffo777.github.io/Laureles",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
